Soft Launch ready

--- a/IconOfGod_Backend/.env
+++ b/IconOfGod_Backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://marverickgonzales:abcdefG%40123@iconofgod.a1psane.mongodb.net/?retryWrites=true&w=majority&appName=IconOfGod
 EMAIL_USER=hello@iconofgod.com
 EMAIL_PASS= rmfo abbs lzur zpss
+JWT_SECRET=abcdefG@123
